# hello-atcoder

./: .dir-locals.el  .gitignore  CMakeLists.txt  Cargo.toml  README.md  README.org  TODOs.org  requirements.txt  stack.yaml
12-22/: 12-22.rs  input-2.txt
2017-like-number/: 2017-like-number.cpp
3-or-2/: 3-or-2.hs
4-adjacent/: 4-adjacent.cpp
753/: 753.rs
754/: 754.rs
755/: 755.rs
756/: 756.rs
a-a-b-problem/: a-a-b-problem.rs
abc-of-abc/: abc-of-abc.rs
abc333/: abc333.hs
abd/: abd.rs
abs/: abs.hs
acrostic/: acrostic.hs
alice-and-brown/: alice-and-brown.rs
alternating-path/: alternating-path.rs  input-1.txt  input-2.txt  input-3.txt
atcoder-alloy/: atcoder-alloy.rs  input-1.txt  input-2.txt
beginning/: beginning.rs
between-two-integers/: between-two-integers.cpp
big-array/: big-array.cpp
binomial-coefficients/: binomial-coefficients.rs
bitter-alchemy/: bitter-alchemy.hs
bugged/: bugged.cpp
bulletin-board/: bulletin-board.hs  input-2.txt
buying-sweets/: buying-sweets.cpp
candies/: candies.cpp
candles/: candles.hs
card-eater/: card-eater.rs
card-game-for-two/: card-game-for-two.rs
cat-snuke-and-a-voyage/: cat-snuke-and-a-voyage.cpp
cats-and-dogs/: cats-and-dogs.hs
christmas/: christmas.rs
christmas-eve/: christmas-eve.rs
coins/: coins.cpp  coins.hs  coins.rs
collatz-problem/: collatz-problem.rs
coloring-dominoes/: coloring-dominoes.cpp
contests/: contests.hs  input-1.txt  input-2.txt
counting-roads/: counting-roads.cpp
day-of-takahashi/: day-of-takahashi.hs  day-of-takahashi.js
daydream/: daydream.hs
derangement/: derangement.cpp
different-strokes/: different-strokes.rs
double-landscape/: double-landscape.rs
edpc-coins/: edpc-coins.rs
evilator/: evilator.rs
exam-and-wizard/: exam-and-wizard.rs
f/: f.hs
fairness/: fairness.hs
feel-the-beat/: feel-the-beat.rs  feel-the-beat.rs.qrinput1  feel-the-beat.rs.qrinput2  feel-the-beat.rs.qrinput3
five-five-everywhere/: five-five-everywhere.cpp
fountain-walk/: fountain-walk.cpp
frog-1/: frog-1.rs
frog-2/: frog-2.rs
good-grid/: good-grid.rs
good-integer/: good-integer.rs
grand-garden/: grand-garden.rs
grid-1/: grid-1.rs
grid-coloring/: grid-coloring.cpp
grid-repainting-2/: grid-repainting-2.cpp  grid-repainting-2.js
half-and-half/: half-and-half.hs
happy-birthday/: happy-birthday.rs
i18n/: i18n.cpp  i18n.hs
ice-tea-store/: ice-tea-store.cpp
k-city/: k-city.cpp  k-city.hs
kagamimochi/: kagamimochi.hs  kagamimochi.rs
katana-thrower/: katana-thrower.cpp
keyence-string/: keyence-string.rs
knapsack-1/: knapsack-1.rs
knapsack-2/: knapsack-2.rs
lcs/: lcs.rs
longest-path/: longest-path.rs
make-a-rectangle/: make-a-rectangle.cpp
make-them-even/: input-1.txt  input-3.txt  make-them-even.rs
many-medians/: many-medians.hs
maximum-sum/: maximum-sum.hs  maximum-sum.js
meaningful-mean/: meaningful-mean.rs
median-of-medians/: median-of-medians.rs
(+75 files in other folders)
