cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 99)

add_executable(4-adjacent 4-adjacent/4-adjacent.cpp)
add_executable(between-two-integers between-two-integers/between-two-integers.cpp)
add_executable(big-array big-array/big-array.cpp)
add_executable(bugged bugged/bugged.cpp)
add_executable(cat-snuke-and-a-voyage cat-snuke-and-a-voyage/cat-snuke-and-a-voyage.cpp)
add_executable(coloring-dominoes coloring-dominoes/coloring-dominoes.cpp)
add_executable(counting-roads counting-roads/counting-roads.cpp)
add_executable(derangement derangement/derangement.cpp)
add_executable(fountain-walk fountain-walk/fountain-walk.cpp)
add_executable(grid-coloring grid-coloring/grid-coloring.cpp)
add_executable(i18n i18n/i18n.cpp)
add_executable(ice-tea-store ice-tea-store/ice-tea-store.cpp)
add_executable(k-city k-city/k-city.cpp)
add_executable(katana-thrower katana-thrower/katana-thrower.cpp)
add_executable(make-a-rectangle make-a-rectangle/make-a-rectangle.cpp)
add_executable(move-and-win move-and-win/move-and-win.cpp)
add_executable(multiple-clocks multiple-clocks/multiple-clocks.cpp)
add_executable(non-decreasing non-decreasing/non-decreasing.cpp)
add_executable(not-so-diverse not-so-diverse/not-so-diverse.cpp)
add_executable(placing-marbles placing-marbles/placing-marbles.cpp)
add_executable(restricted restricted/restricted.cpp)
add_executable(reverse-and-compare reverse-and-compare/reverse-and-compare.cpp)
add_executable(september-9 september-9/september-9.cpp)
add_executable(shift-only shift-only/shift-only.cpp)
add_executable(star-in-parentheses star-in-parentheses/star-in-parentheses.cpp)
add_executable(theater theater/theater.cpp)
add_executable(together together/together.cpp)
add_executable(transit-tree-path transit-tree-path/transit-tree-path.cpp)
add_executable(two-switches two-switches/two-switches.cpp)
add_executable(varied varied/varied.cpp)
add_executable(write-and-erase write-and-erase/write-and-erase.cpp)
